update js and html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./card-usuario.js"></script>
 </head>
 <body>
     <card-user tema="#22341">
@@ -12,6 +13,6 @@
         <h2 slot="nombre">Jordan Guevara</h2>
         <p slot="texto">Realizando el primer componente en html con javascript.</p>
     </card-user>
-    <script type="module" src="./card-usuario.js"></script>
+    
 </body>
 </html>
