--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./card-usuario.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="card-user.js"></script>
 </head>
 <body>
     <card-user tema="#22341">
