--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="card-user.js"></script>
+    <script src="card-usuario.js"></script>
 </head>
 <body>
     <card-user tema="#22341">
