--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="card-usuario.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    
 </head>
 <body>
-    <card-user tema="#22341">
+    <card-user tema="tema">
         <h1 slot="titulo">Mi primer componente</h1>
         <h2 slot="nombre">Jordan Guevara</h2>
         <p slot="texto">Realizando el primer componente en html con javascript.</p>
     </card-user>
-    
+    <script src="./card-usuario.js" defer></script>
 </body>
 </html>
