--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <h2 slot="nombre">Jordan Guevara</h2>
         <p slot="texto">Realizando el primer componente en html con javascript.</p>
     </card-user>
+    <div class="tarjeta">
+        <h1>Mi primer componente</h1>
+        <h2>Jordan Guevara</h2>
+        <p>Realizando el primer componente en html con javascript.</p>
+    </div>
     <script src="./card-usuario.js" defer></script> 
     
 </body>
