update formulario, index.html and style

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     
 </head>
 <body>
+    <formulario-accion>
+        <button slot="Enviar">Cambiar nombre</button>
+        <button slot="Enviar-Parrafo">Cambiar parrafo</button>
+    </formulario-accion>
+    <br>
     <card-user tema="tema">
         <h1 slot="titulo">Mi primer componente</h1>
         <h2 slot="nombre">Jordan Guevara</h2>
         <p slot="texto">Realizando el primer componente en html con javascript.</p>
     </card-user>
-    <div class="tarjeta">
-        <h1>Mi primer componente</h1>
-        <h2>Jordan Guevara</h2>
-        <p>Realizando el primer componente en html con javascript.</p>
-    </div>
     <script src="./card-usuario.js" defer></script> 
-    
+    <script src="./formulario.js" defer></script> 
 </body>
 </html>
