--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <h2 slot="nombre">Jordan Guevara</h2>
         <p slot="texto">Realizando el primer componente en html con javascript.</p>
     </card-user>
-    <script src="./card-usuario.js" defer></script> 
-    <script src="./formulario.js" defer></script> 
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
