--- a/index.html
+++ b/index.html
@@ -8,27 +8,23 @@
     
 </head>
 <body>
+    <!-- Primer Componente -->
+    <formulario-accion>
+        <button slot="Enviar">Cambiar nombre</button>
+        <button slot="Enviar-Parrafo">Cambiar parrafo</button>
+    </formulario-accion>
+    <!-- Tercer Componente -->
     <espe-modal id="miModal">
+        <!-- Segundo Componente -->
         <card-user slot="contenido" tema="tema">
             <span slot="titulo">Mi tercer componente</span>
             <span slot="nombre">Jordan Guevara</span>
             <span slot="texto">Ingeniería de Software</span>
         </card-user>
     </espe-modal>
-
-
     <button onclick="document.getElementById('miModal').abrir()">Mostrar Modal</button>
     <br>
-    <formulario-accion>
-        <button slot="Enviar">Cambiar nombre</button>
-        <button slot="Enviar-Parrafo">Cambiar parrafo</button>
-    </formulario-accion>
-    <br>
-    <card-user tema="tema">
-        <h1 slot="titulo">Mi primer componente</h1>
-        <h2 slot="nombre">Jordan Guevara</h2>
-        <p slot="texto">Realizando el primer componente en html con javascript.</p>
-    </card-user>
+    
     <script type="module" src="./app.js"></script>
 </body>
 </html>
